Fix screen too tall in iOS

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,3 +32,18 @@ body {
     @apply underline-offset-2;
   }
 }
+
+@layer utilities {
+  /* https://github.com/tailwindlabs/tailwindcss/discussions/4515#discussioncomment-2112460 */
+  .min-safe-h-screen {
+    min-height: calc(
+      100vh - env(safe-area-inset-bottom, 0) - env(safe-area-inset-top, 0)
+    );
+  }
+
+  @supports (-webkit-touch-callout: none) {
+    .min-safe-h-screen {
+      min-height: -webkit-fill-available;
+    }
+  }
+}
